--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+cmake==3.22.1
+dlib==19.21.0
 face_recognition==1.3.0
 matplotlib==3.5.1
 numpy==1.21.4
@@ -5,4 +7,5 @@ opencv_python==4.5.4.60
 pandas==1.3.5
 Pillow==8.4.0
 streamlit==1.3.0
-cmake==3.22.1
+fsspec==0.7.4
+xlrd==1.1.0
